Minor style fix in block editor to align controls

--- a/extensions/blocks/story/player/style.scss
+++ b/extensions/blocks/story/player/style.scss
@@ -308,6 +308,12 @@
 
 	.wp-story-controls {
 		display: flex;
+
+		// reapply initial styles
+		@media ( max-width: $break-medium ) {
+			bottom: 30px;
+			margin: 0 10px;
+		}
 	}
 }
 
